# faultdetection-realswarm

./: README.asciidoc
machine_vision/: CMakeLists.txt  machine_vision.cpp  machine_vision.h
scripts/: powerdown.py  runcontroller.py  runcontroller.sh  upload.py
src/: CMakeLists.txt
src/cmake/: TargetEPuck.cmake
src/faultdetection/: CMakeLists.txt  epuck_hom_swarm.argos
src/faultdetection/behaviors/: aggregatebehavior.cpp  behavior.cpp  behavior.h  dispersebehavior.cpp  flockingbehavior.cpp  flockingbehavior.h  homingtofoodbeaconbehavior.cpp  homingtofoodbeaconbehavior.h
src/faultdetection/epuck_hom_swarm/: LINK_BEHAVIOR_FILES  epuck_hom_swarm.cpp  epuck_hom_swarm.h
src/faultdetection/fault_detection_model/: featurevectorsinrobotagent.cpp  featurevectorsinrobotagent.h  sensingandcommunication.cpp  sensingandcommunication.h
src/faultdetection/feature_vector/: bayesianinferencefeaturevector.cpp  bayesianinferencefeaturevector.h  propriofeaturevector.cpp  propriofeaturevector.h
src/plugins/robots/e-puck/: Interface.cmake  RealLibrary.cmake
src/plugins/robots/e-puck/control_interface/: ci_epuck_base_leds_actuator.cpp  ci_epuck_base_leds_actuator.h  ci_epuck_pseudo_range_and_bearing_sensor.cpp  ci_epuck_pseudo_range_and_bearing_sensor.h
src/plugins/robots/e-puck/real_robot/: real_epuck.cpp  real_epuck.h  real_epuck_base.h  real_epuck_base_leds_actuator.cpp  real_epuck_base_leds_actuator.h  real_epuck_debugmessages.h  real_epuck_main.cpp  real_epuck_pseudo_range_and_bearing_sensor.cpp  real_epuck_pseudo_range_and_bearing_sensor.h  real_epuck_range_and_bearing_actuator.cpp  real_epuck_wheels_actuator.cpp
src/testing/: CMakeLists.txt  test_controller.argos  test_controller.cpp  test_controller.h
